[feat][#53] Implement PropositionalizationService tests, fixes